--- a/presentation.html
+++ b/presentation.html
@@ -35,7 +35,7 @@
     <section class="my-goals">
         <h2>My Goals</h2>
         <p>With a profound passion for pioneering inventions, I am at the forefront of developing the 'iBrain', an innovative chip designed to revolutionize and safeguard the future of humanity.</p>
-        <button onclick="window.location.href='https://www.ibraintechnology.com';">Learn More About iBrain</button>
+        <button onclick="window.location.href='https://alaexwx.github.io/I-brainx.github.io/';">Learn More About iBrain</button>
     </section>
     <footer>
         <p>Connect with me and join in on my journey.</p>
